--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,11 +9,12 @@
     <script type="application/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,700' rel='stylesheet' type='text/css'>
+    <link rel=stylesheet type="text/css" href="/css/app.css">
 </head>
 <body>
 
 <nav class="navbar navbar-default">
-    <div class="container-fluid">
+    <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-hamburger"
                     aria-expanded="false">
@@ -22,7 +23,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">SmsSender</a>
+            <a class="navbar-brand" href="/">SmsSender</a>
         </div>
         <div class="collapse navbar-collapse" id="navbar-hamburger">
             <ul class="nav navbar-nav navbar-right">
