--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,32 +6,43 @@
     <title>SmsSender</title>
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.css">
     <script type="application/javascript" src="https://code.jquery.com/jquery-2.2.3.js"></script>
-    <script type="application/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script type="application/javascript"
+            src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,700' rel='stylesheet' type='text/css'>
     <link rel=stylesheet type="text/css" href="/css/app.css">
 </head>
 <body>
+    <nav class="navbar navbar-default">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                        data-target="#navbar-hamburger"
+                        aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/">SmsSender</a>
+            </div>
+            <div class="collapse navbar-collapse" id="navbar-hamburger">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#">Login</a></li>
+                    <li><a href="#">Sign On</a></li>
+                    <li><a href="#">Logout</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-<nav class="navbar navbar-default">
     <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-hamburger"
-                    aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/">SmsSender</a>
-        </div>
-        <div class="collapse navbar-collapse" id="navbar-hamburger">
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">Login</a></li>
-                <li><a href="#">Sign On</a></li>
-                <li><a href="#">Logout</a></li>
-            </ul>
-        </div>
+        <% if(error && error.length > 0) { %>
+        <div class="alert alert-danger"><p><%= error %></p></div>
+        <% } %>
+
+        <% if(success && success.length > 0) { %>
+        <div class="alert alert-success"><p><%= success %></p></div>
+        <% } %>
     </div>
-</nav>
 
