working on sms list, sms detail view

--- a/views/job/index.ejs
+++ b/views/job/index.ejs
@@ -9,7 +9,7 @@
             <div>
                 <h1><i class="fa fa-file-text-o" aria-hidden="true"></i> Welcome To Sms Sender</h1>
                 <p>send massive sms via android device</p>
-                <a class="btn btn-primary btn-lg" href="/main/new">Create New</a>
+                <a class="btn btn-primary btn-lg" href="/jobs/new">Create New</a>
             </div>
         </div>
     </header>
@@ -23,7 +23,7 @@
                     <h4><%= job.description %></h4>
                 </div>
                 <p>
-                    <a href="/main/<%= job._id %>" class="btn btn-primary">More Info</a>
+                    <a href="/jobs/<%= job._id %>" class="btn btn-primary">More Info</a>
                 </p>
             </div>
         </div>
