--- a/views/job/new.ejs
+++ b/views/job/new.ejs
@@ -19,7 +19,7 @@
                     <input class="form-control btn btn-primary" type="submit">
                 </div>
             </form>
-            <a href="/main">Go Back</a>
+            <a href="/jobs">Go Back</a>
         </div>
     </div>
 
