--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -11,7 +11,7 @@
                 <h1>SmsSender</h1>
                 <h3>Send massive sms via android devices</h3>
                 <hr>
-                <a href="/main" class="btn btn-lg btn-default"><i class="fa fa-child" aria-hidden="true"></i> Get Started</a>
+                <a href="/jobs" class="btn btn-lg btn-default"><i class="fa fa-child" aria-hidden="true"></i> Get Started</a>
             </div>
         </div>
     </div>
