--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -28,9 +28,14 @@
             </div>
             <div class="collapse navbar-collapse" id="navbar-hamburger">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Login</a></li>
-                    <li><a href="#">Sign On</a></li>
-                    <li><a href="#">Logout</a></li>
+                    <% if (!currentUser) { %>
+                        <li><a href="/login">Login</a></li>
+                        <li><a href="/register">Sign Up</a></li>
+                    <% } else { %>
+                        <li><a href="#">Signed as <%= currentUser.username %></a></li>
+                        <li><a href="/logout">Logout</a></li>
+                    <% } %>
+
                 </ul>
             </div>
         </div>
