## Job, Sms List UI * show job list with login user
## Authorization
* Job authorization
* Sms authorization

## Sms Detail
* status update(put request)

--- a/views/job/index.ejs
+++ b/views/job/index.ejs
@@ -31,6 +31,7 @@
                         <div>
                             <%= index +1 %> )
                             <%= job.name%>
+                            (user : <%= job.author.username %>)
                             <span class="badge" style="float: right"><%= job.description %></span>
                         </div>
                     </a>
