## Job List * add job (post request) * update job * file upload

--- a/views/job/index.ejs
+++ b/views/job/index.ejs
@@ -35,9 +35,9 @@
     </header>
 
     <%
-        console.log("total job count : " + totalJobCount);
+//        console.log("total job count : " + totalJobCount);
         var totalPage = parseInt(totalJobCount / itemPerPage + (totalJobCount % itemPerPage > 0 ? 1 : 0));
-        console.log("total page : " + totalPage);
+//        console.log("total page : " + totalPage);
     %>
     <nav style="text-align: center">
         <ul class="pagination">
