--- a/views/job/edit.ejs
+++ b/views/job/edit.ejs
@@ -4,21 +4,21 @@
 
 <div class="container">
     <div class="row">
-        <h1 style="text-align: center">Create New Job</h1>
+        <h1 style="text-align: center">Edit <%= job.name %></h1>
         <div style="width: 30%; margin: 25px auto;">
-            <form action="/jobs" method="POST" enctype="multipart/form-data">
+            <form action="/jobs/<%= job._id %>?_method=PUT" method="POST">
                 <div class="form-group">
                     <label>Job Name</label>
-                    <input class="form-control" type="text" name="name" placeholder="Job">
+                    <input class="form-control" type="text" name="job[name]" value="<%= job.name %>">
                 </div>
                 <div class="form-group">
                     <label>Sms To Send</label>
-                    <textarea class="form-control" name="description" placeholder="Sms"></textarea>
+                    <textarea class="form-control" name="job[description]"><%= job.description %></textarea>
                 </div>
                 <div class="form-group">
                     <label>PhoneNumber File To Send Sms</label>
                     <a class="btn btn-xs btn-info" href="/assets/sms.xlsx">sample file download</a>
-                    <input class="form-control" type="file" name="file" placeholder="file">
+                    <input class="form-control" type="file" name="job[file]" placeholder="file">
                 </div>
                 <div class="form-group">
                     <input class="form-control btn btn-primary" type="submit">
