--- a/views/job/show.ejs
+++ b/views/job/show.ejs
@@ -18,8 +18,19 @@
         <div class="container">
             <div>
                 <h1><i class="fa fa-file-text-o" aria-hidden="true"></i> <%= job.name %></h1>
+                <div class="well">
+                    <%- job.description.replace("\r", "<br />") %>
+                </div>
                 <p>Create Date : <%= job.created.toDateString() %></p>
-                <p><a href="/jobs">Go Back</a></p>
+                <p style="display: inline-block;margin-right: 20px"><a href="/jobs">Go Back</a></p>
+                <span style="float: right">
+                    <a class="btn btn-xs btn-primary" style="display: inline-block" href="/jobs/<%= job._id %>/edit">
+                      EDIT
+                    </a>
+                    <form style="display: inline-block" action="/jobs/<%= job._id %>?_method=DELETE" method="POST">
+                        <button class="btn btn-xs btn-danger">DELETE</button>
+                    </form>
+                </span>
             </div>
         </div>
     </header>
@@ -63,6 +74,14 @@
             var subList = job.smslist.slice(start, end);
          %>
         <% var index = 0; subList.forEach(function(sms){ %>
+        <%
+            if (sms.status == 1) {
+                var status = "success";
+            } else if (sms.status == -1) {
+                var status = "fail";
+            }
+
+        %>
         <li class="list-group-item
                  <% if (sms.status == 0) { %>
 
@@ -74,9 +93,10 @@
                 ">
             <a href="/jobs/<%= job._id %>/smslist/<%= sms._id %>">
                 <div>
-                    <%= index + 1 %> )
+                    <%= start + index + 1 %> )
                     <%= sms.name %>
-                    <span class="badge" style="float: right"><%= sms.phonenumber %></span>
+                    <span class="badge"><%= sms.phonenumber %></span>
+                    <span class="badge" style="float: right"><%= status %></span>
                 </div>
             </a>
         </li>
