add android link

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -28,6 +28,7 @@
             </div>
             <div class="collapse navbar-collapse" id="navbar-hamburger">
                 <ul class="nav navbar-nav navbar-right">
+                    <li><a href="http://flowgrammer.net/ota/FlowSmsSender/FlowSmsSender.apk">Android App Install</a></li>
                     <% if (!currentUser) { %>
                         <li><a href="/login">Login</a></li>
                         <li><a href="/register">Sign Up</a></li>
