add validation to phonenumber

--- a/views/job/show.ejs
+++ b/views/job/show.ejs
@@ -79,6 +79,8 @@
                 var status = "success";
             } else if (sms.status == -1) {
                 var status = "fail";
+            } else if (sms.status == -2) {
+                var status = "invalid";
             }
 
         %>
